updated grpc client
